--- a/shapegame.vcxproj.filters
+++ b/shapegame.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="tests\simple-glfw.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Circle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="deps\gl\glcorearb.h">
@@ -267,6 +270,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="deps\GLFW\glfw3native.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Circle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
