--- a/shapegame.vcxproj.filters
+++ b/shapegame.vcxproj.filters
@@ -275,5 +275,8 @@
     <ClInclude Include="include\Circle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\RotationInfo.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
